# github-actions-actions

./: .gitignore  .mcp.json  .pre-commit-config.yaml  .yamllint  ACTIONS.md  ADOPTION.md  ADOPTION_GUIDE.md  AGENTS.md  AUDIT_REPORT_2026-02-06.md  AUDIT_SUMMARY_audit-run-002.md  CLEANUP_ANALYSIS.md  CLEANUP_ANALYSIS_REPORT.md  CLEANUP_VERIFICATION_REPORT.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_SUMMARY.md  EXECUTION_BLOCKED.md  IMPLEMENTATION_TEST_FLOW_SUMMARY.md  IMPLEMENTATION_TEST_REPORT.md  PROJECT_STATUS.md  PURPOSE.md  README.md  SECURITY_CHECKLIST.md  SECURITY_FIX_PLAN.md  SYSTEM_CONSTITUTION.md  TESTING.md  TEST_DIRECT_MERGE.md  TEST_DIRECT_MERGE_V2.md  TEST_EXECUTION_REPORT.md  TEST_PR.md  TEST_V3.md  TEST_V4.md  UX_DESIGN_CLEANUP_REPORT.md  WORKFLOW_EXECUTION_REPORT.md  coverage.json  coverage_after.json  pyproject.toml  pytest.ini  test-action-fixer.sh  test-execution-report.txt  test-results.xml  (+2 more)
.bmad/: 2-implementation-test-flow-execution-report.md  CODE_REVIEW_FINDINGS.md  IMPLEMENTATION_SUMMARY.md  TEST_DOCUMENTATION.md  TRACEABILITY_MATRIX.md  implementation-test-flow-execution-summary.md  implementation-test-flow-report.md  implementation-test-summary.md
.claude/: cleanup-analysis.md  settings.json
.concept/: ambiguities.yml  autopilot.yml  charter.yml  claims.ndjson  conflicts.yml  decisions.md  invariants.yml  mappings.yml  ontology.yml  ontology_budget.yml  ontology_metrics.json  run_state.json  term_queue.yml  tombstones.yml
.serena/: project.yml
_bmad-output/: implementation-readiness-report.md  project-documentation-index.md
(+597 files in other folders)
